syntax = "proto3";

package pb;


option go_package = "github.com/steve-mir/diivix_backend/pb";

// The request message for changing a user's password.
message ChangePasswordRequest {
    string old_password = 1;    // The current password of the user for verification.
    string new_password = 2;    // The new password to set.
    string confirm_password = 3; // must match the new_password
  }
  
  // The response message for the ChangePassword RPC method.
  message ChangePasswordResponse {
    bool success = 1;           // Indicates if the password change was successful.
    string message = 2;         // An optional message, e.g., for error details.
  }